Fix z-index issue with create/edit ToDo modal
The sidenav would render above the create/edit ToDo modal because it
has a set z-index. Solved by setting a higher z-index to the modal.

--- a/src/createToDoComponent.scss
+++ b/src/createToDoComponent.scss
@@ -1,4 +1,5 @@
 #create-todo {
+    z-index: 2; // Higher z-index than sidenav
     // Background
     background-color: hsla(0, 0%, 50%, 0.5);
     // Position
